add_executable(hello_thread.out hello_thread.cpp)
add_executable(create_thread.out create_thread.cpp)
add_executable(arg_thread.out arg_thread.cpp)
add_executable(ref_thread.out ref_thread.cpp)
add_executable(mulit_thread.out multi_thread.cpp)
add_executable(mutex_thread.out mutex_thread.cpp)
add_executable(singleton_thread.out singleton_thread.cpp)
add_executable(condition_thread.out condition_thread.cpp)

